fdo#67358: sw: "fix" line painting artifacts when resizing columns

SwEditWin::MouseButtonDown(): for unknown reasons invalidating the
window here causes the column resizing lines to not be removed after the
resize is done, so disable it.

(regression from 289185fd02d6d9734b6dbde01f15c4e6c5beacbb)

Change-Id: If3ba0a72c53c5c2734fb905ae35d62f6a3e8938b
(cherry picked from commit a2c67975c03010b90c706523293f180c1f29e229)
Reviewed-on: https://gerrit.libreoffice.org/5661
Reviewed-by: Miklos Vajna <vmiklos@suse.cz>
Tested-by: Miklos Vajna <vmiklos@suse.cz>